# Unreal-Engine-Dev-Configurator

./: .gitignore  LICENSE  README.md  pyproject.toml  run_setup.bat  run_uecfg.bat
.github/workflows/: ci.yml
manifests/: schema.json  ue_5.7.json  ue_5.8.json
skills/ue-dev-configurator-installed-build/: SKILL.md
skills/ue-dev-configurator-installed-build/agents/: openai.yaml
skills/ue-dev-configurator-installed-build/references/: installed-build-playbook.md
src/ue_configurator/: __init__.py  cli.py  profile.py
src/ue_configurator/fix/: horde.py  toolchain.py  visual_studio.py
src/ue_configurator/locks/: __init__.py  single_instance_lock.py
src/ue_configurator/manifest/: __init__.py  detect_ue_version.py  load_manifest.py  manifest_types.py
src/ue_configurator/probe/: base.py  horde.py  runner.py  system.py  toolchain.py  unreal.py
src/ue_configurator/report/: common.py  console.py  json_report.py
src/ue_configurator/reporting/: startup_banner.py  toolchain_summary.py
src/ue_configurator/runtime/: single_instance.py
src/ue_configurator/setup/: pipeline.py  splash.py
src/ue_configurator/ue/: __init__.py  artifact_resolver.py  build_config.py  build_targets.py  config_paths.py  (+9 more)
tests/: conftest.py  test_artifact_resolver.py  test_build_targets.py  test_cli_intent.py  test_ddc_workflow.py  test_horde_helper.py  test_horde_probe.py  test_installed_build_sync.py  test_manifest.py  test_register_engine.py  test_scoring.py  test_setup.py  test_single_instance.py  test_toolchain_pdbcopy.py  test_unreal_probes.py  test_visual_studio_fix.py
