[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ue-configurator"
version = "0.1.0"
description = "Cross-machine Unreal Engine developer environment auditor"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Wesley" }]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows",
    "License :: OSI Approved :: MIT License"
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
uecfg = "ue_configurator.cli:main"
